🐳 feat: Update setup Nginx

--- a/srcs/nginx/index.html
+++ b/srcs/nginx/index.html
@@ -343,7 +343,7 @@
             </a>
           </div>
           <div class="release-notes">
-            <p>{% blocktranslate %}View <a href="https://docs.djangoproject.com/en/{{ version }}/releases/" target="_blank" rel="noopener">release notes</a> for Django</p>
+            <p>index.html</p>
           </div>
       </header>
       <main>
